--- a/src/styles/components/user/_UserContactInfoWidget.scss
+++ b/src/styles/components/user/_UserContactInfoWidget.scss
@@ -26,7 +26,6 @@
         }
         &__button {
             display: grid;
-            margin-top: $small;
             width: 100%;
         }
     }
@@ -43,7 +42,6 @@
         max-width: 50rem;
         &__button {
             display: inline-block;
-            margin-top: $small;
         }
     }
 }
