--- a/src/styles/components/user/_UserNameWidget.scss
+++ b/src/styles/components/user/_UserNameWidget.scss
@@ -30,7 +30,6 @@
         }
         &__button {
             display: grid;
-            margin-top: $small;
             width: 100%;
         }
     }
@@ -47,7 +46,6 @@
         max-width: 50rem;
         &__button {
             display: inline-block;
-            margin-top: $small;
         }
     }
 }
